# warmahordes-opendata

./: .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  .yamllint.yaml  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: check.yaml  platforms.yaml  release.yaml
data/models/circle/engine_structure/: celestial_fulcrum.yaml  well_of_orboros.yaml
data/models/circle/solo/: blackclad_stoneshaper.yaml  blackclad_wayfarer.yaml  bloodweaver_night_witch.yaml  chuck_dogwood.yaml  druid_wilder.yaml  gallows_grove.yaml  lord_of_the_feast.yaml  reeve_hunter.yaml  shivers.yaml  tharn_blood_shaman.yaml  tharn_ravager_shaman.yaml  tharn_ravager_white_mane.yaml  tharn_wolf_rider_champion.yaml  una_the_falconer.yaml  war_wolf.yaml  wolf_lord_morraig.yaml
data/models/circle/unit/: brighid_and_caul.yaml  death_wolves.yaml  druid_mist_riders.yaml  druid_of_orboros_overseer.yaml  druids_of_orboros.yaml  nuala_the_huntress.yaml  reeve_of_orboros_chieftain_and_standard.yaml  reeves_of_orboros.yaml  sentry_stone_and_mannikins.yaml  shifting_stones.yaml  stone_keeper.yaml  stoneward_and_woldstalkers.yaml  tharn_blood_pack.yaml  tharn_bloodtrackers.yaml  tharn_bloodweaver_haruspex.yaml  tharn_bloodweavers.yaml  tharn_ravager_chieftain.yaml  tharn_ravagers.yaml  tharn_wolf_riders.yaml  warpborn_skinwalker_alpha.yaml  warpborn_skinwalkers.yaml  wolves_of_orboros.yaml  wolves_of_orboros_chieftain_and_standard.yaml
data/models/circle/warbeast/: argus_moonhound.yaml  brennos_the_elderhorn.yaml  feral_warpwolf.yaml  ghetorix.yaml  gnarlhorn_satyr.yaml  gorax_rager.yaml  loki.yaml  megalith.yaml  pureblood_warpwolf.yaml  razorwing_griffon.yaml  rip_horn_satyr.yaml  rotterhorn_griffon.yaml  scarsfell_griffon.yaml  shadowhorn_satyr.yaml  storm_raptor.yaml  warpwolf_stalker.yaml  wild_argus.yaml  winter_argus.yaml  wold_guardian.yaml  wold_wight.yaml  woldwarden.yaml  woldwatcher.yaml  woldwrath.yaml  woldwyrd.yaml
data/models/circle/warlock/: baldur_the_stonecleaver.yaml  baldur_the_stonesoul.yaml  bradigus_thorle_the_runecarver.yaml  grayle_the_farstrider.yaml  iona_the_unseen.yaml  kaya_the_moonhunter.yaml  kaya_the_wildborne.yaml  kaya_the_wildheart.yaml  kromac_champion_of_the_wurm.yaml  kromac_the_ravenous.yaml  krueger_the_stormlord.yaml  krueger_the_stormwrath.yaml  mohsar_the_desertwalker.yaml  morvahna_the_autumnblade.yaml  morvahna_the_dawnshadow.yaml  tanith_the_feral_song.yaml  (+2 more)
docs/: Card.md
src/warmahordes_opendata/: _i18n.py  i18n.py  keywords.py  model.py  rules.py
src/warmahordes_opendata/locale/: warmahordes_opendata.pot
tests/: base.py  test_keywords.py  test_rules.py
warmahordes_opendata/: base.py  dataset.py  i18n.py  model.py  models.py  rules.py  slgf.py  spells.py  themes.py  util.py  yaml.py
warmahordes_opendata/cli/: extract_messages.py  models.py  rules.py  themes.py
warmahordes_opendata/data/: model_aliases.yaml
warmahordes_opendata/data/spells/: admonition.yaml  explosivo.yaml  purification.yaml  revive.yaml  stygian_abyss.yaml  transmutation.yaml
warmahordes_opendata/data/themes/: armored_korps.yaml  band_of_heroes.yaml  black_industries.yaml  bump_in_the_night.yaml  children_of_the_dragon.yaml  clockwork_legions.yaml  dark_host.yaml  dark_legacy.yaml  dark_menagerie.yaml  defenders_of_ios.yaml  destruction_initiative.yaml  disciples_of_agony.yaml  exemplar_interdiction.yaml  flame_in_the_darkness.yaml  forges_of_war.yaml  gravediggers.yaml  guardians_of_the_temple.yaml  hammer_strike.yaml  hearts_of_darkness.yaml  heavy_metal.yaml  jaws_of_the_wolf.yaml  kriel_company.yaml  legions_of_dawn.yaml  legions_of_steel.yaml  llaelese_resistance.yaml  magnum_opus.yaml  masters_of_war.yaml  operating_theater.yaml  oracles_of_annihilation.yaml  prima_materia.yaml  primal_terrors.yaml  ravens_of_war.yaml  scourge_of_the_broken_coast.yaml  secret_masters.yaml  shadows_of_the_retribution.yaml  soldiers_of_fortune.yaml  sons_of_the_tempest.yaml  storm_division.yaml  storm_of_the_north.yaml  strange_bedfellows.yaml  (+19 more)
warmahordes_opendata/locale/: warmahordes_opendata.pot
warmahordes_opendata/schema/: model.yaml  rule.yaml  spell.yaml  theme.yaml
warmahordes_opendata/tests/: test_i18n.py  test_models.py  test_rules.py  test_themes.py
(+2522 files in other folders)
