[metadata]
name = warmahordes_opendata
summary = WARMACHINE® and HORDES® Open Data
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
author = Moisés Guimarães
author-email = guimaraes@pm.me
home-page = https://ironcodex.net/warmahordes_opendata
python-requires = >=3.7
classifier =
    Environment :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[bdist_wheel]
universal = 1

# Babel config

[extract_messages]
input-dirs = src/warmahordes_opendata
output-file = warmahordes_opendata.pot
no-location = true

[init_catalog]
domain = warmahordes_opendata
input_file = warmahordes_opendata.pot
output-dir = src/warmahordes_opendata/locale

[update_catalog]
domain = warmahordes_opendata
input_file = warmahordes_opendata.pot
output-dir = src/warmahordes_opendata/locale

[compile_catalog]
domain = warmahordes_opendata
directory = src/warmahordes_opendata/locale
