[metadata]
name = warmahordes_opendata
summary = WARMACHINE® and HORDES® Open Data
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
author = Moisés Guimarães
author-email = guimaraes@pm.me
home-page = https://ironcodex.net/warmahordes_opendata
python-requires = >=3.9
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Board Games

[files]
packages =
    warmahordes_opendata

[entry_points]
console_scripts =
  wmh-models = warmahordes_opendata.cli.models:main
  wmh-rules = warmahordes_opendata.cli.rules:main
  wmh-themes = warmahordes_opendata.cli.themes:main

[bdist_wheel]
universal = 1

# Babel config

[init_catalog]
domain = warmahordes_opendata
input_file = warmahordes_opendata/locale/warmahordes_opendata.pot
output-dir = warmahordes_opendata/locale

[update_catalog]
domain = warmahordes_opendata
input_file = warmahordes_opendata/locale/warmahordes_opendata.pot
output-dir = warmahordes_opendata/locale

[compile_catalog]
domain = warmahordes_opendata
directory = warmahordes_opendata/locale
